# gfgLock

./: .gitignore  .qmllint.ini  CONTRIBUTING.md  EDGE_RESIZE_FIX.md  build.ps1  build_native.ps1  build_portable.ps1  build_silent_user_installer.ps1  build_system_installer.ps1  build_user_installer.ps1  dev_setup.md  gfglock.logs  gfglock_aes256_pycryptodome.py  gl_fast_v2a_cryptography_openssl_backed.py  gl_fast_v2a_openssl_cli.bat  gl_fast_v2b_cryptography_openssl_backed.py  gl_fast_v2b_openssl_cli.bat  gl_pro_v1a_non_chunk_based.py  gl_pro_v1b_chunk_based.py  gl_v2a_openssl_cli.bat  gl_v2b_cryptography_openssl_backed.py  gl_v3a_fast_partial_aes_and_mask.py  pyproject.toml  readme.html  readme.md  release_notes_v1.0.0.md  release_notes_v2.6.9.md  requirements.txt  test_edge_resize.py
.github/workflows/: build-release.yml  winget-release.yml
Archived/: gl_v1_chunk_based.py  gl_v1_non_chunk_based.py
archived/: gfglock_aes256_openssl_cli.bat  gl_pro_v1a_non_chunk_based.py  script_1.bat  script_2.bat
fixes/: PNG_FIX_SUMMARY.md  fix_png_srgb_aggressive.py
gfglock/: __init__.py  __main__.py  app.py
gfglock/config/: __init__.py  defaults.py  ui_config.py
gfglock/controllers/: __init__.py  app_ctrl.py  encrypt_ctrl.py  prefs_ctrl.py
gfglock/core/: __init__.py  aes256_gcm_cfb.py  chacha20_poly1305.py  chunk_processing.py  native_bridge.py
gfglock/models/: __init__.py  file_model.py
gfglock/qml/: EncryptDialog.qml  PreferencesWindow.qml  main.qml
gfglock/services/: __init__.py  notifier.py  worker.py
gfglock/ui/: __init__.py  boot_thread.py  splash_screen.py
gfglock/utils/: __init__.py  console.py  helpers.py  logging.py  settings.json  settings.py  single_instance.py
installer/: gfglock_installer.iss  gfglock_installer.iss.bck  gfglock_installer_non_admin.iss  gfglock_silent_user_installer.iss  gfglock_system_installer.iss  gfglock_user_installer.iss
native/: CMakeLists.txt  CMakePresets.json  vcpkg.json
native/src/: aes_cpu.cpp  aes_cpu.hpp  bindings.cpp  gfglock_shell.def  kdf.cpp  kdf.hpp  shell_extension.cpp
release_notes/: release_notes_v2.6.9.md  release_notes_v2.7.0.md  release_notes_v2.7.5.md  release_notes_v3.0.0.md  release_notes_v3.0.1.md
scripts/: app_meta.ps1  build.ps1  build_native.ps1  build_portable.ps1  build_system_installer.ps1  build_user_installer.ps1  read_meta.py
src/: gfgLock_gui.spec  gfglock_fast_aes256_cryptography.py  gui.py  requirements.txt  settings.json  worker.py
src/config/: __init__.py  defaults.py  ui_config.py
src/core/: __init__.py  aes256_gcm_cfb.py  chacha20_poly1305.py  chunk_processing.py
src/my_app/: gfgLock.spec  gfgLock_portable.spec  (+1 more)
tests/: benchmark.py  benchmark_performance.py  conftest.py  test_app_ctrl.py  test_chunk_processing.py  test_console.py  test_encrypt_ctrl.py  test_encryption.py  test_file_model.py  test_helpers.py  test_logging.py  test_native_bridge.py  test_notifier.py  test_prefs_ctrl.py  test_qt_png.py  test_settings.py  test_single_instance.py  test_worker.py
(+26 files in other folders)
