[build-system]
requires = ["setuptools>=70", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "gfglock"
version = "3.0.0"
description = "Secure AES-256 file encryption and decryption - fast, simple, reliable"
authors = [{ name = "Shah Faisal", email = "shahfaisalgfg@gmail.com" }]
readme = "readme.md"
requires-python = ">=3.11"
license = { text = "Proprietary" }
dependencies = [
    "PySide6>=6.7",
    "cryptography>=46.0",
    "pycryptodome>=3.20",
    "py-cpuinfo>=9.0",
]

[project.scripts]
gfglock = "gfglock.app:main"

[project.optional-dependencies]
dev = ["pyinstaller>=6.17", "pytest>=8.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.setuptools.packages.find]
where = ["."]
include = ["gfglock*"]

[tool.setuptools.package-data]
gfglock = [
    "assets/icons/*.png",
    "assets/icons/*.ico",
    "qml/*.qml",
    "qml/components/*.qml",
]

[tool.gfglock]
display_name = "gfgLock"
publisher    = "gfgRoyal"
url          = "https://shahfaisalgfg.github.io/shahfaisal/"
exe_name     = "gfgLock.exe"
winget_id    = "gfgRoyal.gfgLock"
